deploy/mcp/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mcp
spec:
  to:
    kind: Service
    name: mcp-svc
  port:
    targetPort: http
  tls:
    termination: edge
